--- a/roles/tftp-server/defaults/main.yml
+++ b/roles/tftp-server/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 netboot_image: https://deb.debian.org/debian/dists/stretch/main/installer-amd64/current/images/netboot/netboot.tar.gz
-late_command_url: https://anonscm.debian.org/cgit/debconf-video/ansible.git/plain/setup_ansible.sh
+# late_command_url: https://anonscm.debian.org/cgit/debconf-video/ansible.git/plain/setup_ansible.sh
+late_command_url: http://{{ inventory_hostname }}/lc/late.sh
 
 time_zone: UTC
 domain: video.debconf.org
@@ -8,6 +9,8 @@ domain: video.debconf.org
 apt_proxy: ""
 # Defaults to deb.debian.org | archive.ubuntu.com
 #mirror: deb.debian.org
+
+web_root: /var/www/html
 
 user_name: videoteam
 user_password: RedPill
