git clone https, no trailing lines.

--- a/roles/veyepar-encoder/tasks/main.yml
+++ b/roles/veyepar-encoder/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - name: git clone veyepar
   git:
-    repo: git://github.com/CarlFK/veyepar.git
+    repo: https://github.com/CarlFK/veyepar.git
     dest: "/home/{{ user_name }}/veyepar"
     depth: 1
   become: true
@@ -121,4 +121,3 @@
     owner:  "{{ user_name }}"
     group:  "{{ user_name }}"
     mode: u+x
-
