--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -39,10 +39,10 @@
   template:
     src: templates/30apt-proxy.j2
     dest: /etc/apt/apt.conf.d/30apt-proxy
-  when: apt_proxy != ""
+  when: apt_proxy
 
 - name: unconfigure apt proxy
   file:
     path: /etc/apt/apt.conf.d/30apt-proxy
     state: absent
-  when: apt_proxy == ""
+  when: not apt_proxy
