--- a/roles/dhcp-server/handlers/main.yml
+++ b/roles/dhcp-server/handlers/main.yml
@@ -8,3 +8,19 @@
 
 - name: restart network-manager
   command: "/bin/systemctl restart NetworkManager.service"
+
+- name: Restart server
+  when: ansible_connection != 'local'
+  command: shutdown -r now "Reboot triggered by Ansible"
+  async: 0
+  poll: 0
+  ignore_errors: true
+
+- name: Wait for server to restart
+  local_action:
+    module: wait_for
+    host: "{{ inventory_hostname }}"
+    port: "{{ ansible_port | default(22) }}"
+    delay: 1
+    timeout: 300
+  sudo: false
