--- a/roles/dhcp-server/tasks/main.yml
+++ b/roles/dhcp-server/tasks/main.yml
@@ -7,6 +7,9 @@
   template:
     src: templates/76-netnames.rules.j2
     dest: /etc/udev/rules.d/76-netnames.rules
+  notify:
+  - Restart server
+  - Wait for server to restart
 
 - name: configure network interfaces (static)
   template:
