--- a/roles/tftp-server/tasks/main.yml
+++ b/roles/tftp-server/tasks/main.yml
@@ -27,12 +27,17 @@
   with_items:
   - lc
   - d-i/xenial
+  - d-i/jessie
 
-- name: write preseed.cfg
+- name: write xenial/preseed.cfg
   template:
     src: preseed.cfg.j2
-    # dest: /srv/tftp/d-i/xenial/preseed.cfg
     dest: "{{ web_root }}/d-i/xenial/preseed.cfg"
+
+- name: write jessie/preseed.cfg
+  template:
+    src: preseed.cfg.j2
+    dest: "{{ web_root }}/d-i/jessie/preseed.cfg"
 
 - name: push late_command.sh
   copy:
@@ -49,6 +54,8 @@
 - name: inject preseed into menu (do injection)
   lineinfile:
     dest: "{{ item.path }}"
-    regexp: '\s+append vga=788 initrd=ubuntu-installer/amd64/initrd.gz --- quiet'
-    line: " append initrd=ubuntu-installer/amd64/initrd.gz auto=true interface=auto url=http://{{ inventory_hostname }} ---"
+    regexp: (\s+append vga=.*\s+initrd=\S+)\s+(?!auto=true)(.*)
+    backrefs: true
+    line: \1 auto=true interface=auto url=http://{{ inventory_hostname }} \2
+
   with_items: "{{ menus.files }}"
