--- a/roles/dhcp-server/handlers/main.yml
+++ b/roles/dhcp-server/handlers/main.yml
@@ -17,6 +17,7 @@
   ignore_errors: true
 
 - name: Wait for server to restart
+  when: ansible_connection != 'local'
   local_action:
     module: wait_for
     host: "{{ inventory_hostname }}"
