Serve preseed and late_command from local machine  (for R&D, may move to usb stick when robuster.)

--- a/scripts/d-i/jessie/preseed.cfg
+++ b/scripts/d-i/jessie/preseed.cfg
@@ -65,9 +65,9 @@ d-i netcfg/dhcpv6_timeout string 5
 # Any hostname and domain names assigned from dhcp take precedence over
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
-#d-i netcfg/get_hostname string wuff
-d-i netcfg/get_domain string video.debconf.org
-d-i netcfg/get_hostname seen false
+# d-i netcfg/get_hostname string wuff
+# d-i netcfg/get_domain string video.debconf.org
+# d-i netcfg/get_hostname seen false
 
 # If you want to force a hostname, regardless of what either the DHCP
 # server returns or what the reverse DNS entry for the IP is, uncomment
@@ -158,7 +158,8 @@ d-i clock-setup/ntp boolean true
 # name must be given in traditional, non-devfs format (so e.g. /dev/hda or
 # /dev/sda, and not e.g. /dev/discs/disc0/disc).
 # For example, to use the first SCSI/SATA hard disk:
-d-i partman-auto/disk string /dev/sda
+### d-i partman-auto/disk string /dev/sda
+d-i partman-auto/disk string /dev/nvme0n1
 # In addition, you'll need to specify the method to use.
 # The presently available methods are:
 # - regular: use the usual partition types for your architecture
@@ -227,7 +228,7 @@ d-i partman/confirm_nooverwrite boolean true
 # so this will only work if the disks are the same size.
 #d-i partman-auto/disk string /dev/sda /dev/sdb
 
-# Next you need to specify the physical partitions that will be used. 
+# Next you need to specify the physical partitions that will be used.
 #d-i partman-auto/expert_recipe string \
 #      multiraid ::                                         \
 #              1000 5000 4000 raid                          \
@@ -350,9 +351,10 @@ d-i grub-installer/with_other_os boolean true
 
 # Due notably to potential USB sticks, the location of the MBR can not be
 # determined safely in general, so this needs to be specified:
-d-i grub-installer/bootdev  string /dev/sda
+###d-i grub-installer/bootdev  string /dev/sda
+# d-i grub-installer/bootdev  string /dev/nvme0n1
 # To install to the first device (assuming it is not a USB stick):
-#d-i grub-installer/bootdev  string default
+d-i grub-installer/bootdev  string default
 
 # Alternatively, if you want to install to a location other than the mbr,
 # uncomment and edit these lines:
@@ -423,7 +425,8 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-d-i preseed/late_command string in-target wget -O penultimate_setup.sh 'https://anonscm.debian.org/cgit/debconf-video/ansible.git/plain/setup_ansible.sh' ; in-target chmod 755 /penultimate_setup.sh ; in-target sh /penultimate_setup.sh
+# d-i preseed/late_command string in-target wget -O penultimate_setup.sh 'https://anonscm.debian.org/cgit/debconf-video/ansible.git/plain/setup_ansible.sh' ; in-target chmod 755 /penultimate_setup.sh ; in-target sh /penultimate_setup.sh
+d-i preseed/late_command string in-target wget 'http://$url/late_command.sh' ; in-target chmod 755 /late_command.sh ; in-target sh /late_command.sh
 
 # don't ask for extra firmare
 d-i hw-detect/load_firmware boolean false
