pass boot device from kernel append

--- a/scripts/d-i/jessie/preseed.cfg
+++ b/scripts/d-i/jessie/preseed.cfg
@@ -159,7 +159,6 @@ d-i clock-setup/ntp boolean true
 # /dev/sda, and not e.g. /dev/discs/disc0/disc).
 # For example, to use the first SCSI/SATA hard disk:
 ### d-i partman-auto/disk string /dev/sda
-d-i partman-auto/disk string /dev/nvme0n1
 # In addition, you'll need to specify the method to use.
 # The presently available methods are:
 # - regular: use the usual partition types for your architecture
@@ -352,7 +351,7 @@ d-i grub-installer/with_other_os boolean true
 # Due notably to potential USB sticks, the location of the MBR can not be
 # determined safely in general, so this needs to be specified:
 ###d-i grub-installer/bootdev  string /dev/sda
-# d-i grub-installer/bootdev  string /dev/nvme0n1
+# d-i grub-installer/bootdev  string /dev/nvme0n1p1
 # To install to the first device (assuming it is not a USB stick):
 d-i grub-installer/bootdev  string default
 
@@ -426,7 +425,8 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 # d-i preseed/late_command string in-target wget -O penultimate_setup.sh 'https://anonscm.debian.org/cgit/debconf-video/ansible.git/plain/setup_ansible.sh' ; in-target chmod 755 /penultimate_setup.sh ; in-target sh /penultimate_setup.sh
-d-i preseed/late_command string in-target wget 'http://$url/late_command.sh' ; in-target chmod 755 /late_command.sh ; in-target sh /late_command.sh
+### d-i preseed/late_command string in-target wget 'http://twist/lc/late_command.sh' ; in-target chmod 755 /late_command.sh ; in-target sh /late_command.sh
+d-i preseed/late_command string cd /target/tmp && wget http://$url/lc/late_command.sh && chmod u+x late_command.sh && chroot /target /tmp/late_command.sh $(debconf-get mirror/suite) $(debconf-get passwd/username)
 
 # don't ask for extra firmare
 d-i hw-detect/load_firmware boolean false
