--- a/scripts/syslinux.cfg
+++ b/scripts/syslinux.cfg
@@ -1,9 +1,24 @@
-DEFAULT linux
+PROMPT 1
+# TIMEOUT 50
+
+DEFAULT 7
+
 LABEL linux
 KERNEL linux
 INITRD initrd.gz
-APPEND --- debconf/priority=high auto url=twist:8000 netcfg/dhcp_timeout=60 hostname=gator partman-auto/disk="/dev/nvme0n1"
+APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=cnt7 netcfg/get_domain=lan
+
+LABEL 7
+KERNEL linux
+INITRD initrd.gz
+APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=cnt7 netcfg/get_domain=lan partman-auto/disk="/dev/sda"
+
 # netcfg/get_domain=lan
+
+LABEL g
+KERNEL linux
+INITRD initrd.gz
+APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=gator netcfg/get_domain=lan partman-auto/disk="/dev/nvme0n1"
 
 # The "auto" command launches the installation in the automated mode, where the configuration of hostname, locale and keymap are postponed so that they can be answered from the preseed file loaded from the network.
 
