chagne ansible_distribution to distro so that a Ubuntu box can install debian nodes

--- a/roles/xorg/tasks/xfce4.yml
+++ b/roles/xorg/tasks/xfce4.yml
@@ -15,7 +15,7 @@
 - name: install an XFCE icon pack (Ubuntu)
   apt:
     name: xubuntu-icon-theme
-  when: ansible_distribution == 'Ubuntu'
+  when: distro == 'Ubuntu'
 
 - name: copy xfce4 configuration script
   copy:
