--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -4,13 +4,13 @@
     src: templates/sources.list.j2
     dest: /etc/apt/sources.list
   notify: apt update
-  when: ansible_distribution == 'Debian'
+  when: distro == 'Debian'
 
 - name: set debian apt preferences
   template:
     src: templates/default-release.j2
     dest: /etc/apt/preferences.d/10-default-release
-  when: ansible_distribution == 'Debian'
+  when: distro == 'Debian'
 
 - name: add timvideos ppas
   apt_repository:
@@ -18,7 +18,7 @@
   with_items:
   - fpga-support
   - voctomix
-  when: ansible_distribution == 'Ubuntu'
+  when: distro == 'Ubuntu'
 
 - name: set apt configuration
   copy:
