hardcoded IPs for testing till we get DNS working.

--- a/scripts/syslinux.cfg
+++ b/scripts/syslinux.cfg
@@ -1,12 +1,18 @@
 PROMPT 1
-# TIMEOUT 50
+TIMEOUT 50
 
-DEFAULT 7
+DEFAULT g
 
 LABEL linux
 KERNEL linux
 INITRD initrd.gz
 APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=cnt7 netcfg/get_domain=lan
+
+LABEL g
+KERNEL linux
+INITRD initrd.gz
+APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.194:80 hw-detect/load_firmware=false hostname=gator netcfg/get_domain=lan partman-auto/disk="/dev/nvme0n1"
+
 
 LABEL 7
 KERNEL linux
@@ -14,11 +20,6 @@ INITRD initrd.gz
 APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=cnt7 netcfg/get_domain=lan partman-auto/disk="/dev/sda"
 
 # netcfg/get_domain=lan
-
-LABEL g
-KERNEL linux
-INITRD initrd.gz
-APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=gator netcfg/get_domain=lan partman-auto/disk="/dev/nvme0n1"
 
 # The "auto" command launches the installation in the automated mode, where the configuration of hostname, locale and keymap are postponed so that they can be answered from the preseed file loaded from the network.
 
