stretch not jessie.

--- a/scripts/syslinux.cfg
+++ b/scripts/syslinux.cfg
@@ -11,7 +11,7 @@ APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:800
 LABEL g
 KERNEL linux
 INITRD initrd.gz
-APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.194:80 hw-detect/load_firmware=false hostname=gator netcfg/get_domain=lan partman-auto/disk="/dev/nvme0n1"
+APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.194:80 hw-detect/load_firmware=false hostname=gator netcfg/get_domain=lan partman-auto/disk="/dev/nvme0n1" iso-scan/filename=debian-stretch-DI-rc3-amd64-netinst.iso rescue=true
 
 
 LABEL 7
