stretch not jessie

--- a/roles/system-software/handlers/main.yml
+++ b/roles/system-software/handlers/main.yml
@@ -1,3 +1,4 @@
 ---
 - name: restart systemd-journald
   command: systemctl restart systemd-journald
+  when: ansible_env.ANSIBLE_UNDER_DI is undefined
