usb on hold until pxe booting stretch works

--- a/scripts/d-i/jessie/preseed.cfg
+++ b/scripts/d-i/jessie/preseed.cfg
@@ -1,3 +1,4 @@
+# Ansible managed
 #### Contents of the preconfiguration file (for jessie)
 ### Localization
 # Preseeding only locale sets language, country and locale.
@@ -66,8 +67,8 @@ d-i netcfg/dhcpv6_timeout string 5
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
 # d-i netcfg/get_hostname string wuff
-# d-i netcfg/get_domain string video.debconf.org
-# d-i netcfg/get_hostname seen false
+d-i netcfg/get_domain string private.lan
+d-i netcfg/get_hostname seen false
 
 # If you want to force a hostname, regardless of what either the DHCP
 # server returns or what the reverse DNS entry for the IP is, uncomment
@@ -99,8 +100,7 @@ d-i netcfg/wireless_wep string
 d-i mirror/country string manual
 d-i mirror/http/hostname string deb.debian.org
 d-i mirror/http/directory string /debian
-d-i mirror/http/proxy string
-
+d-i mirror/http/proxy string http://dc10b:8000/
 # Suite to install.
 #d-i mirror/suite string testing
 # Suite to use for loading installer components (optional).
@@ -109,26 +109,15 @@ d-i mirror/http/proxy string
 ### Account setup
 # Skip creation of a root account (normal user account will be able to
 # use sudo).
-#d-i passwd/root-login boolean false
+d-i passwd/root-login boolean false
 # Alternatively, to skip creation of a normal user account.
-d-i passwd/make-user boolean false
-
-# Root password, either in clear text
-d-i passwd/root-password password redPill
-d-i passwd/root-password-again password redPill
-# or encrypted using an MD5 hash.
-#d-i passwd/root-password-crypted password [MD5 hash]
+d-i passwd/make-user boolean true
 
 # To create a normal user account.
-#d-i passwd/user-fullname string Debian User
-#d-i passwd/username string debian
-# Normal user's password, either in clear text
-#d-i passwd/user-password password insecure
-#d-i passwd/user-password-again password insecure
+d-i passwd/user-fullname string Video Team User
+d-i passwd/username string juser
 # or encrypted using an MD5 hash.
-#d-i passwd/user-password-crypted password [MD5 hash]
-# Create the first user with the specified UID instead of the default.
-#d-i passwd/user-uid string 1010
+d-i passwd/user-password-crypted password $6$rounds=656000$Eyjidoi$37d0kawG/M7YHEf3KHbKMDAueDvQnr5ocJriqoI/N./Qkfg/JQqT6H9KK2C4MMm1utt7yK3eOgXj1k.9TOaeh.
 
 # The user account will be added to some standard initial groups. To
 # override that, use this.
@@ -140,7 +129,7 @@ d-i clock-setup/utc boolean true
 
 # You may set this to any valid setting for $TZ; see the contents of
 # /usr/share/zoneinfo/ for valid values.
-d-i time/zone string Europe/Paris
+d-i time/zone string US/Central
 
 # Controls whether to use NTP to set the clock during the install
 d-i clock-setup/ntp boolean true
@@ -297,6 +286,7 @@ d-i apt-setup/contrib boolean true
 #d-i apt-setup/services-select multiselect security, updates
 #d-i apt-setup/security_host string security.debian.org
 
+
 # Additional repositories, local[0-9] available
 #d-i apt-setup/local0/repository string \
 #       http://local.server/debian stable main
@@ -310,7 +300,6 @@ d-i apt-setup/contrib boolean true
 #FIXME: this should work... but the below is secure :)
 d-i apt-setup/local0/key string file:///hd-media/ac583520.asc
 
-
 # By default the installer requires that repositories be authenticated
 # using a known gpg key. This setting can be used to disable that
 # authentication. Warning: Insecure, not recommended.
@@ -320,7 +309,7 @@ d-i apt-setup/local0/key string file:///hd-media/ac583520.asc
 tasksel tasksel/first multiselect standard
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server
+d-i pkgsel/include string openssh-server curl python python3 # grub-ipxe
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
 #d-i pkgsel/upgrade select none
@@ -334,11 +323,14 @@ popularity-contest popularity-contest/participate boolean true
 ### Boot loader installation
 # Grub is the default boot loader (for x86). If you want lilo installed
 # instead, uncomment this:
-#d-i grub-installer/skip boolean true
+### did this
+d-i grub-installer/skip boolean true
 # To also skip installing lilo, and install no bootloader, uncomment this
 # too:
-#d-i lilo-installer/skip boolean true
+### and this
+d-i lilo-installer/skip boolean true
 
+d-i nobootloader/confirmation_common note
 
 # This is fairly safe to set, it makes grub install automatically to the MBR
 # if no other operating system is detected on the machine.
@@ -350,8 +342,7 @@ d-i grub-installer/with_other_os boolean true
 
 # Due notably to potential USB sticks, the location of the MBR can not be
 # determined safely in general, so this needs to be specified:
-###d-i grub-installer/bootdev  string /dev/sda
-# d-i grub-installer/bootdev  string /dev/nvme0n1p1
+# d-i grub-installer/bootdev  string /dev/sda
 # To install to the first device (assuming it is not a USB stick):
 d-i grub-installer/bootdev  string default
 
@@ -381,7 +372,7 @@ d-i grub-installer/bootdev  string default
 #d-i finish-install/keep-consoles boolean true
 
 # Avoid that last message about the install being complete.
-d-i finish-install/reboot_in_progress note
+# d-i finish-install/reboot_in_progress note
 
 # This will prevent the installer from ejecting the CD during the reboot,
 # which is useful in some situations.
@@ -415,6 +406,8 @@ d-i finish-install/reboot_in_progress note
 # This first command is run as early as possible, just after
 # preseeding is read.
 #d-i preseed/early_command string anna-install some-udeb
+d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh && chmod u+x early_command.sh && ./early_command.sh
+
 # This command is run immediately before the partitioner starts. It may be
 # useful to apply dynamic partitioner preseeding that depends on the state
 # of the disks (which may not be visible when preseed/early_command runs).
@@ -424,9 +417,7 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-# d-i preseed/late_command string in-target wget -O penultimate_setup.sh 'https://anonscm.debian.org/cgit/debconf-video/ansible.git/plain/setup_ansible.sh' ; in-target chmod 755 /penultimate_setup.sh ; in-target sh /penultimate_setup.sh
-### d-i preseed/late_command string in-target wget 'http://twist/lc/late_command.sh' ; in-target chmod 755 /late_command.sh ; in-target sh /late_command.sh
-d-i preseed/late_command string cd /target/tmp && wget http://$url/lc/late_command.sh && chmod u+x late_command.sh && chroot /target /tmp/late_command.sh $(debconf-get mirror/suite) $(debconf-get passwd/username)
+d-i preseed/late_command string in-target sh -c "unset http_proxy; wget http://dc10b/lc/late_command.sh  && ANSIBLE_UNDER_DI=1 sh late_command.sh && rm late_command.sh"
 
 # don't ask for extra firmare
 d-i hw-detect/load_firmware boolean false
