--- a/roles/tftp-server/tasks/main.yml
+++ b/roles/tftp-server/tasks/main.yml
@@ -57,6 +57,6 @@
     dest: "{{ item.path }}"
     regexp: (\s+append vga=.*\s+initrd=\S+)\s+(?!auto=true)(.*)
     backrefs: true
-    line: \1 auto=true interface=auto url={{ inventory_hostname }} DEBCONF_DEBUG=5 partman-auto/disk="/dev/sda" \2
+    line: \1 auto=true interface=auto url={{ inventory_hostname }} DEBCONF_DEBUG=5 hw-detect/load_firmware=false partman-auto/disk="/dev/sda" \2
 
   with_items: "{{ menus.files }}"
