--- a/roles/xorg/handlers/main.yml
+++ b/roles/xorg/handlers/main.yml
@@ -2,3 +2,8 @@
   command: /usr/local/bin/xfce4-debconfvideo-config
   become: true
   become_user: "{{ user_name }}"
+
+- name: restart lightdm
+  command: "/bin/systemctl restart lightdm.service"
+  become: true
+  become_user: "{{ user_name }}"
