--- a/roles/xorg/tasks/lightdm.yml
+++ b/roles/xorg/tasks/lightdm.yml
@@ -1,10 +1,4 @@
 ---
-- name: configure lightdm autologin
-  template:
-    src: templates/autologin.conf.j2
-    dest: /etc/lightdm/lightdm.conf.d/autologin.conf
-  when: autologin
-
 - name: install lightdm
   apt:
     pkg: "{{ item }}"
@@ -14,7 +8,21 @@
   - policykit-1
   - x11-xserver-utils
 
+- name: create dir for configs
+  file:
+    path: /etc/lightdm/lightdm.conf.d
+    state: directory
+  when: distro=="Debian"
+
+- name: configure lightdm autologin
+  template:
+    src: templates/autologin.conf.j2
+    dest: /etc/lightdm/lightdm.conf.d/autologin.conf
+  when: autologin
+  notify: restart lightdm
+
 - name: kill pulseaudio with fire on logout
   copy:
     src: files/kill-pulseaudio.conf
     dest: /etc/lightdm/lightdm.conf.d/kill-pulseaudio.conf
+  notify: restart lightdm
