remove #code that doesn't work anyway.

--- a/scripts/d-i/stretch/preseed.cfg
+++ b/scripts/d-i/stretch/preseed.cfg
@@ -100,7 +100,7 @@ d-i netcfg/wireless_wep string
 d-i mirror/country string manual
 d-i mirror/http/hostname string deb.debian.org
 d-i mirror/http/directory string /debian
-d-i mirror/http/proxy string 
+d-i mirror/http/proxy string
 d-i mirror/http/proxy string http://dc10b:8000/
 # Suite to install.
 #d-i mirror/suite string testing
@@ -312,7 +312,7 @@ tasksel tasksel/first multiselect standard
 
 # Individual additional packages to install
 # d-i pkgsel/include string openssh-server curl python python3 unattended-upgrades # libpam-cap # grub-ipxe
-d-i pkgsel/include string unattended-upgrades 
+d-i pkgsel/include string unattended-upgrades
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
 d-i pkgsel/upgrade select none
@@ -422,7 +422,7 @@ d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 d-i preseed/late_command string /tmp/misc/isshd.sh && cd /target/tmp && wget http://$url/lc/late_command.sh && chmod u+x late_command.sh && ANSIBLE_UNDER_DI=1 chroot /target /tmp/late_command.sh $(debconf-get mirror/suite) $(debconf-get passwd/username)
-# d-i preseed/late_command string /tmp/misc/isshd.sh && chroot /target set -x && apt install -y unattended-upgrades
+# d-i preseed/late_command string /tmp/misc/isshd.sh && chroot /target apt install -y unattended-upgrades
 
 # don't ask for extra firmare
 d-i hw-detect/load_firmware boolean false
