big honking start here script.

--- a/scripts/syslinux.cfg
+++ b/scripts/syslinux.cfg
@@ -1,26 +1,5 @@
-PROMPT 1
-TIMEOUT 50
-
-DEFAULT g
-
+DEFAULT linux
 LABEL linux
 KERNEL linux
 INITRD initrd.gz
-APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=cnt7 netcfg/get_domain=lan
-
-LABEL g
-KERNEL linux
-INITRD initrd.gz
-APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.194:80 hw-detect/load_firmware=false hostname=gator netcfg/get_domain=lan partman-auto/disk="/dev/nvme0n1" iso-scan/filename=debian-stretch-DI-rc3-amd64-netinst.iso rescue=true
-
-
-LABEL 7
-KERNEL linux
-INITRD initrd.gz
-APPEND --- debconf/priority=high DEBCONF_DEBUG=5 auto=true url=192.168.1.199:8000 hw-detect/load_firmware=false hostname=cnt7 netcfg/get_domain=lan partman-auto/disk="/dev/sda"
-
-# netcfg/get_domain=lan
-
-# The "auto" command launches the installation in the automated mode, where the configuration of hostname, locale and keymap are postponed so that they can be answered from the preseed file loaded from the network.
-
-# setting hostname and disk here so they can be edited at boot
+APPEND --- debconf/priority=high locale=en_US keymap=us netcfg/dhcp_timeout=60
