sync boot parms from pxe to usb

--- a/scripts/d-i/stretch/preseed.cfg
+++ b/scripts/d-i/stretch/preseed.cfg
@@ -67,7 +67,7 @@ d-i netcfg/dhcpv6_timeout string 5
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
 #d-i netcfg/get_hostname string wuff
-d-i netcfg/get_domain string private.lan
+# d-i netcfg/get_domain string private.lan
 d-i netcfg/get_hostname seen false
 
 # If you want to force a hostname, regardless of what either the DHCP
@@ -100,7 +100,7 @@ d-i netcfg/wireless_wep string
 d-i mirror/country string manual
 d-i mirror/http/hostname string deb.debian.org
 d-i mirror/http/directory string /debian
-d-i mirror/http/proxy string
+d-i mirror/http/proxy string 
 d-i mirror/http/proxy string http://dc10b:8000/
 # Suite to install.
 #d-i mirror/suite string testing
@@ -206,10 +206,10 @@ d-i partman-auto/choose_recipe select atomic
 
 # This makes partman automatically partition without confirmation, provided
 # that you told it what to do using one of the methods above.
-d-i partman-partitioning/confirm_write_new_label boolean true
-d-i partman/choose_partition select finish
-d-i partman/confirm boolean true
-d-i partman/confirm_nooverwrite boolean true
+# d-i partman-partitioning/confirm_write_new_label boolean true
+# d-i partman/choose_partition select finish
+# d-i partman/confirm boolean true
+# d-i partman/confirm_nooverwrite boolean true
 
 ## Partitioning using RAID
 # The method should be set to "raid".
@@ -300,7 +300,7 @@ d-i apt-setup/contrib boolean true
 # sources.list line will be left commented out
 #d-i apt-setup/local0/key string http://layer-acht.org/ac583520.asc
 #FIXME: this should work... but the below is secure :)
-d-i apt-setup/local0/key string file:///hd-media/ac583520.asc
+# d-i apt-setup/local0/key string file:///hd-media/ac583520.asc
 
 # By default the installer requires that repositories be authenticated
 # using a known gpg key. This setting can be used to disable that
@@ -311,8 +311,7 @@ d-i apt-setup/local0/key string file:///hd-media/ac583520.asc
 tasksel tasksel/first multiselect standard
 
 # Individual additional packages to install
-# d-i pkgsel/include string openssh-server curl python python3 unattended-upgrades # libpam-cap # grub-ipxe
-d-i pkgsel/include string unattended-upgrades
+d-i pkgsel/include string openssh-server curl python python3 # grub-ipxe
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
 d-i pkgsel/upgrade select none
@@ -328,13 +327,14 @@ popularity-contest popularity-contest/participate boolean true
 # Grub is the default boot loader (for x86). If you want lilo installed
 # instead, uncomment this:
 ### did this
-d-i grub-installer/skip boolean true
+# d-i grub-installer/skip boolean true
 # To also skip installing lilo, and install no bootloader, uncomment this
 # too:
 ### and this
-d-i lilo-installer/skip boolean true
+# d-i lilo-installer/skip boolean true
 
-d-i nobootloader/confirmation_common note
+### and this
+# d-i nobootloader/confirmation_common note
 
 # This is fairly safe to set, it makes grub install automatically to the MBR
 # if no other operating system is detected on the machine.
@@ -373,10 +373,10 @@ d-i grub-installer/bootdev  string default
 # During installations from serial console, the regular virtual consoles
 # (VT1-VT6) are normally disabled in /etc/inittab. Uncomment the next
 # line to prevent this.
-#d-i finish-install/keep-consoles boolean true
+d-i finish-install/keep-consoles boolean true
 
 # Avoid that last message about the install being complete.
-# d-i finish-install/reboot_in_progress note
+d-i finish-install/reboot_in_progress note
 
 # This will prevent the installer from ejecting the CD during the reboot,
 # which is useful in some situations.
@@ -421,8 +421,11 @@ d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-d-i preseed/late_command string /tmp/misc/isshd.sh && cd /target/tmp && wget http://$url/lc/late_command.sh && chmod u+x late_command.sh && ANSIBLE_UNDER_DI=1 chroot /target /tmp/late_command.sh $(debconf-get mirror/suite) $(debconf-get passwd/username)
-# d-i preseed/late_command string /tmp/misc/isshd.sh && chroot /target apt install -y unattended-upgrades
+d-i preseed/late_command string cd /target/tmp && wget http://$url/lc/late_command.sh && chmod u+x late_command.sh && ANSIBLE_UNDER_DI=1 in-target /tmp/late_command.sh $url $(debconf-get mirror/suite) $(debconf-get passwd/username)
 
 # don't ask for extra firmare
 d-i hw-detect/load_firmware boolean false
+
+# Install UEFI boot loader on top of non efi .. clober whatever.
+d-i partman-efi/non_efi_system boolean true
+
