--- a/scripts/syslinux.cfg
+++ b/scripts/syslinux.cfg
@@ -2,4 +2,4 @@ DEFAULT linux
 LABEL linux
 KERNEL linux
 INITRD initrd.gz
-APPEND --- debconf/priority=high locale=en_US keymap=us netcfg/dhcp_timeout=60
+APPEND --- debconf/priority=high auto=true netcfg/dhcp_timeout=60
