remove clutter (lc dir)

--- a/scripts/d-i/jessie/preseed.cfg
+++ b/scripts/d-i/jessie/preseed.cfg
@@ -417,7 +417,7 @@ d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-d-i preseed/late_command string in-target sh -c "unset http_proxy; wget http://dc10b/lc/late_command.sh  && ANSIBLE_UNDER_DI=1 sh late_command.sh && rm late_command.sh"
+d-i preseed/late_command string in-target sh -c "unset http_proxy; wget http://dc10b/late_command.sh  && ANSIBLE_UNDER_DI=1 sh late_command.sh && rm late_command.sh"
 
 # don't ask for extra firmare
 d-i hw-detect/load_firmware boolean false
