--- a/scripts/d-i/stretch/preseed.cfg
+++ b/scripts/d-i/stretch/preseed.cfg
@@ -100,7 +100,7 @@ d-i netcfg/wireless_wep string
 d-i mirror/country string manual
 d-i mirror/http/hostname string deb.debian.org
 d-i mirror/http/directory string /debian
-d-i mirror/http/proxy string 
+d-i mirror/http/proxy string
 d-i mirror/http/proxy string http://dc10b:8000/
 # Suite to install.
 #d-i mirror/suite string testing
@@ -421,7 +421,7 @@ d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-d-i preseed/late_command string cd /target/tmp && wget http://$url/lc/late_command.sh && chmod u+x late_command.sh && ANSIBLE_UNDER_DI=1 in-target /tmp/late_command.sh $url $(debconf-get mirror/suite) $(debconf-get passwd/username)
+d-i preseed/late_command string cd /target/tmp && wget http://$url/late_command.sh && chmod u+x late_command.sh && ANSIBLE_UNDER_DI=1 in-target /tmp/late_command.sh $url $(debconf-get mirror/suite) $(debconf-get passwd/username)
 
 # don't ask for extra firmare
 d-i hw-detect/load_firmware boolean false
