update to debian stretch released

--- a/scripts/d-i/stretch/preseed.cfg
+++ b/scripts/d-i/stretch/preseed.cfg
@@ -412,6 +412,8 @@ d-i finish-install/reboot_in_progress note
 #d-i preseed/early_command string anna-install some-udeb
 d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh && chmod u+x early_command.sh && ./early_command.sh
 
+# d-i preseed/run string /ec/early_command.sh
+
 # This command is run immediately before the partitioner starts. It may be
 # useful to apply dynamic partitioner preseeding that depends on the state
 # of the disks (which may not be visible when preseed/early_command runs).
