--- a/scripts/d-i/xenial/preseed_disk.cfg
+++ b/scripts/d-i/xenial/preseed_disk.cfg
@@ -17,9 +17,9 @@ d-i partman-lvm/confirm boolean true
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
 
-d-i grub-installer/bootdev  string default
-# d-i grub-installer/bootdev  string /dev/nvme0n1
+# d-i grub-installer/bootdev  string default
+d-i grub-installer/bootdev  string /dev/nvme0n1
 
 # Unmount partitions that are in use?
-d-i partman/unmount_active  boolean false
+d-i partman/unmount_active boolean false
 
