--- a/scripts/d-i/xenial/preseed_video.cfg
+++ b/scripts/d-i/xenial/preseed_video.cfg
@@ -22,9 +22,11 @@ d-i pkgsel/include string openssh-server curl python python3
 # Avoid that last message about the install being complete.
 d-i finish-install/reboot_in_progress note stop
 
-# d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh && chmod u+x early_command.sh && ./early_command.sh
+d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh && chmod u+x early_command.sh && ./early_command.sh
 
-d-i preseed/run string /ec/early_command.sh
+# this almost does the same thing, but prepends d-i/$suite/.
+# I think there is a way to prevent that, but I can't figure it out.
+# d-i preseed/run string /ec/early_command.sh
 
 ### cfk - get late script from shaz, run it.
 d-i preseed/late_command string cd /target/tmp && unset http_proxy; wget http://$url/late_command.sh && chmod u+x late_command.sh && ANSIBLE_UNDER_DI=1 in-target /tmp/late_command.sh $url $(debconf-get mirror/suite) $(debconf-get passwd/username)
