move bm arround

--- a/roles/blackmagic/tasks/main.yml
+++ b/roles/blackmagic/tasks/main.yml
@@ -8,22 +8,24 @@
   get_url:
     dest: /var/cache/debconf-video-blackmagic/desktopvideo.deb
     url: "{{ blackmagic.desktopvideo }}"
-  when: blackmagic.desktopvideo is defined
-  notify: Install desktopvideo
 
 - name: Download Blackmagic Destkop Video GUI package
   get_url:
     dest: /var/cache/debconf-video-blackmagic/desktopvideo-gui.deb
     url: "{{ blackmagic.desktopvideo_gui }}"
-  when: blackmagic.desktopvideo_gui is defined
-  notify: Install desktopvideo-gui
 
 - name: Download Blackmagic Media Express package
   get_url:
     dest: /var/cache/debconf-video-blackmagic/mediaexpress.deb
     url: "{{ blackmagic.desktopvideo }}"
-  when: blackmagic.mediaexpress is defined
-  notify: Install mediaexpress
+
+- name: Install debs
+  apt:
+    deb: /var/cache/{{ item }}
+  with_items:
+    - debconf-video-blackmagic/desktopvideo.deb
+    # - debconf-video-blackmagic/desktopvideo-gui.deb
+    - debconf-video-blackmagic/mediaexpress.deb
 
 - name: Install blackmagic DKMS driver
   command: dkms install {{ item }}/{{ blackmagic.dkms_version }}
@@ -32,4 +34,4 @@
   with_items:
   - blackmagic
   - blackmagic-io
-  when: blackmagic.dkms_version is defined and ansible_env.ANSIBLE_UNDER_DI is undefined
+  when: ansible_env.ANSIBLE_UNDER_DI is undefined
